# Brecilien

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: enedis.py  geo.py  geocode.py  main.py  models.py  osm.py  project_store.py
backend/app/harq/: incremental_redundancy.py
backend/app/linklevel/: bler_curves.py  effective_sinr.py  fast_fading.py
backend/app/phy/: antenna.py  channels.py  mcs_table.py  noise.py  numerology.py  power_control.py  tbs.py
backend/app/propagation/: building_index.py  diffraction.py  link_budget.py  los.py  o2i.py  shadow_field.py  tr38901.py
backend/app/report/: __init__.py  clustering.py  html_report.py  pdf.py  render.py
backend/app/report/templates/: map_render.html
backend/app/sim/: autoconnect.py  coverage.py  engine.py  roles.py  topology.py
backend/tests/: test_bler_and_harq.py  test_diffraction.py  test_los.py  test_osm.py  test_power_control.py  test_propagation.py
frontend/: index.html  package-lock.json
frontend/src/: App.tsx  api.ts  csvImport.ts  geo.ts  index.css  theme.ts  types.ts
frontend/src/components/: AddSuburbButton.tsx  InfoTooltip.tsx  LocationMultiSearch.tsx  MapView.tsx  NodeInspector.tsx  ProjectMenu.tsx  PropagationModelInfo.tsx  ResultsPanel.tsx  Sidebar.tsx  TopBar.tsx
frontend/src/map/: SimMap.ts
